fix(todoist): Move list item button to far right and only visible on hover (#1765)
Fixes button covering up long task names in the inbox when on far left
Closes #1758

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -503,15 +503,15 @@ SingleTaskPaneToolbar .toggl-button.asana-board, /* new ui v1 */
 }
 
 /********* TODOIST *********/
-.toggl-button.todoist {
+.toggl-button.todoist-detail-subtask {
   visibility: hidden;
 }
 
-.toggl-button.todoist.active {
+.toggl-button.todoist-detail-subtask.active  {
   visibility: visible;
 }
 
-.task_item:hover .toggl-button.todoist {
+.task_list_item:hover .toggl-button.todoist-detail-subtask  {
   visibility: visible;
 }
 
